updating latest changes...

--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -104,6 +104,8 @@
 
 <script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
+<script type="text/javascript" src="modules/counter/counterController.js"></script>
+
 <script type="text/javascript" src="modules/user/userService.js"></script>
 <script type="text/javascript" src="modules/user/userController.js"></script>
 
