--- a/src/main/webapp/modules/customer/d.html
+++ b/src/main/webapp/modules/customer/d.html
@@ -18,7 +18,7 @@
 	   	<th class="text-center"><small>Email Id</small></th>
 	   	<th class="text-center"><small>Mobile No</small></th>
 	   	<th class="text-center"><small>Status</small></th>
-	   	<th class="text-center"><small>Account Id</small></th>
+	   	<th class="text-center"><small>Balance</small></th>
 	   	<th class="text-center"><small>Update Time</small></th>
 	</tr>
 	</thead>
@@ -43,7 +43,7 @@
 			{{item.status}}
 		</td>	
 		<td class="text-right">
-			{{item.accountId}}
+			{{item.stock.handStock  | number : 2}}
 		</td>
 		<td width="160">
 			{{item.updateTime | date:'yyyy-MM-dd HH:mm:ss'}}
