--- a/src/main/webapp/modules/zgeneral/breadCrumbDirective.html
+++ b/src/main/webapp/modules/zgeneral/breadCrumbDirective.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="col-md-9 text-right" x-ng-show="isLoggedIn">
 		<span class="text-primary"><strong><small>
-		{{sessionContext.sessionUser.firstName}} / {{sessionContext.sessionUser.id}} / {{sessionContext.sessionUser.roleId}}
+		{{sessionContext.sessionUser.firstName}} / {{sessionContext.sessionUser.userId}} / {{sessionContext.sessionUser.roleId}}
 		</small></strong></span>
 	</div>
 
