--- a/src/main/webapp/modules/session/login-d.html
+++ b/src/main/webapp/modules/session/login-d.html
@@ -11,7 +11,7 @@
 				<div class="form-group">
 	          		<label>User Id</label>
 	          		<input class="form-control" type="text" placeholder="User Id"
-	          			x-ng-model="user.id">
+	          			x-ng-model="user.userId">
 				</div>
 		        <div class="form-group">
 	    			<label>Password</label>
