--- a/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
+++ b/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" 
