--- a/src/main/webapp/home-d.html
+++ b/src/main/webapp/home-d.html
@@ -184,6 +184,7 @@
 
 <script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
+<script type="text/javascript" src="modules/counter/counterService.js"></script>
 <script type="text/javascript" src="modules/counter/counterController.js"></script>
 
 <script type="text/javascript" src="modules/user/userService.js"></script>
